compiler/testData/cli/jvm/classAndFileClassClash.kt
@file:JvmName("Foo")
package test

public fun foo() {}

class Foo {}